tests/miniJava/neg/004417_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] false java ( ) { return 0 ; } }
